syntax = "proto3";
package com.rst.consumer;

message CreateClientRequest {
  string username = 1;
  string email = 2;
}

message ClientResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message ClientByIdRequest {
  int32 id = 1;
}

message DeleteClientByIdResponse {
  bool success = 1;
}

service ClientService {
    rpc saveClient (CreateClientRequest) returns (ClientResponse);
    rpc getClient (ClientByIdRequest) returns (ClientResponse);
    rpc deleteClient(ClientByIdRequest) returns (DeleteClientByIdResponse);
}